--- a/circle.yml
+++ b/circle.yml
@@ -9,5 +9,6 @@ test:
     - cf auth $CF_USER_EMAIL $CF_PASSWORD
     - cf target -o proxy.gap.com -s development
     - cf set-env rabbitmq-email RABBIT_MQ_URL $RABBIT_MQ_URL
+    - cf set-env rabbitmq-email SEND_GRID_API_KEY $SEND_GRID_API_KEY
     - cf push rabbitmq-email
     - cf restage rabbitmq-email
