--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "start": "RABBIT_MQ_URL=$RABBIT_MQ_URL SEND_GRID_API_KEY=$SEND_GRID_API_KEY nodemon index.js"
+    "start": "RABBIT_MQ_URL=$RABBIT_MQ_URL SEND_GRID_API_KEY=$SEND_GRID_API_KEY node minify.js && nodemon index.js"
   },
   "author": "islam elmenshawy",
   "license": "ISC",
@@ -13,7 +13,8 @@
     "@sendgrid/mail": "^6.2.1",
     "amqplib": "^0.5.2",
     "body-parser": "^1.18.2",
-    "express": "^4.10.2"
+    "express": "^4.10.2",
+    "node-minify": "^2.4.2"
   },
   "engines": {
     "node": "8.10.0",
