--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "islam elmenshawy",
   "license": "ISC",
   "dependencies": {
+    "@newrelic/native-metrics": "^2.4.0",
     "@sendgrid/mail": "^6.2.1",
     "amqplib": "^0.5.2",
     "body-parser": "^1.18.2",
     "express": "^4.10.2",
+    "newrelic": "^4.0.0",
     "node-minify": "^2.4.2"
   },
   "engines": {
